ajustes nos links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           src="./assets/avatar.png"
           alt="Foto de João Vinícius sorrindo usando óculos e camisa branca"
         />
-        <p>@teste</p>
+        <p>João Vinícius</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -43,16 +43,18 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a href="https://github.com/joaovvs/" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+       <!--
+         <a href="#" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
         <a href="#" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        -->
+        <a href="https://www.linkedin.com/in/jo%C3%A3o-vin%C3%ADcius-ba79178/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
